--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,7 +4,7 @@
     "@smartface/html-to-text": "^1.0.7",
     "@smartface/styler": "^1.3.15",
     "js-base": "1.0.4",
-    "sf-core": "^3.0.1",
+    "sf-core": "^3.0.2-beta.1",
     "sf-extension-utils": "^3.5.0"
   }
 }
