--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -17,6 +17,6 @@
 			"themesFolder": "themes",
 			"themesDistFolder": "scripts/themes"
 		},
-		"version": "6.10.3-rc.1"
+		"version": "6.11.0"
 	}
 }
