--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "dependencies": {
-    "@smartface/smartface.ui-editor": "6.11.1"
+    "@smartface/smartface.ui-editor": "6.12.0-alpha.1"
   }
 }
