--- a/scripts/package.json
+++ b/scripts/package.json
@@ -2,12 +2,9 @@
   "dependencies": {
     "@smartface/contx": "~1.5.0",
     "@smartface/html-to-text": "^1.0.7",
+    "@smartface/router": "^1.0.0-beta.3",
     "@smartface/styler": "^1.3.15",
-    "history": "^4.7.2",
     "js-base": "1.0.4",
-    "path-to-regexp": "^2.4.0",
-    "resolve-pathname": "^2.2.0",
-    "sf-core": "3.1.1",
     "sf-extension-utils": "^4.0.0"
   }
 }
