--- a/config/iOS/Info.plist
+++ b/config/iOS/Info.plist
@@ -63,7 +63,7 @@
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
+	<false/>
 	<key>UILaunchImages</key>
 	<array>
 		<dict>
