--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,8 +1,8 @@
 {
 	"dependencies": {
-		"@smartface/contx": "~1.5.0",
+		"@smartface/contx": "~2.1.0",
 		"@smartface/html-to-text": "^1.0.7",
-		"@smartface/router": "^1.0.0-beta.3",
+		"@smartface/router": "^1.1.0",
 		"@smartface/styler": "^1.3.15",
 		"js-base": "1.0.4",
 		"sf-extension-utils": "^4.0.0"
