--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,13 +1,14 @@
 {
-	"dependencies": {
-		"@smartface/contx": "^2.0.3",
-		"@smartface/html-to-text": "^1.0.7",
-		"@smartface/styler": "^1.3.15",
-		"js-base": "1.0.4",
-		"sf-core": "^3.2.0",
-		"sf-extension-utils": "^4.0.0"
-	},
-	"scripts": {
-		"postinstall": "ENV_PATH=.smf/.env sfMarketplaceService install"
-	}
+  "dependencies": {
+    "@smartface/contx": "^2.0.3",
+    "@smartface/html-to-text": "^1.0.7",
+    "@smartface/router": "^1.1.2",
+    "@smartface/styler": "^1.3.15",
+    "js-base": "1.0.4",
+    "sf-core": "^3.2.0",
+    "sf-extension-utils": "^4.0.0"
+  },
+  "scripts": {
+    "postinstall": "ENV_PATH=.smf/.env sfMarketplaceService install"
+  }
 }
