--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,7 +5,8 @@
 		"@smartface/router": "^1.1.0",
 		"@smartface/styler": "^1.3.15",
 		"js-base": "1.0.4",
-		"sf-extension-utils": "^4.0.0"
+		"sf-extension-utils": "^5.0.0",
+		"sf-core": "^4.0.0"
 	},
 	"scripts": {
 		"postinstall": "ENV_PATH=.smf/.env sfMarketplaceService install"
