--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "dependencies": {
-    "@smartface/smartface.ui-editor": "6.13.0"
-  }
+	"dependencies": {
+		"@smartface/smartface.ui-editor": "6.13.0",
+		"circular-json": "^0.5.9",
+		"flatted": "^2.0.0"
+	},
+	"marketplace-assets": {}
 }
