--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,7 +9,9 @@
     "@smartface/styler": "^1.3.15",
     "js-base": "1.0.4",
     "sf-core": "^4.0.0",
-    "sf-extension-utils": "^4.0.0"
+    "sf-extension-utils": "^4.0.0",
+    "flatted" : "^2.0.0",
+    "circular-json"  : "^0.5.9"
   },
   "scripts": {
     "postinstall": "ENV_PATH=.smf/.env sfMarketplaceService install"
